Updating h2 and h3 clamp to fix biddingforgood size on mobile

--- a/assets/stylesheets/_typography.scss
+++ b/assets/stylesheets/_typography.scss
@@ -9,11 +9,11 @@ h1 {
 }
 
 h2 {
-  font-size: clamp(2.25rem, 4vw, 3.25rem);
+  font-size: clamp(2rem, 4vw, 3.25rem);
 }
 
 h3 {
-  font-size: clamp(1.75rem, 3vw, 2.25rem);
+  font-size: clamp(1.5rem, 3vw, 2.25rem);
 }
 
 h4 {
